// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) hide_var 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) call_after_init 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) warning_message 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) noinit 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) init_on_onlchange 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) displaymode_hex 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) no_copy 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) linkalways 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) no_check 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) no_instance_in_retain 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) hide_all_locals 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) no_assign 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) reflection 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) unknown_attribute_typo 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) enable_dynamic_creation 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) const_replaced 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) const_non_replaced 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) global_init_slot 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) monitoring_display 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) monitoring_encoding 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) subsequent 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) suppress_warning 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) conditionalshow 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) pingroup 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) info_message 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) text_message 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) instance_path_with_reflection 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) displaymode_bin 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) displaymode_dec 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) displaymode_invalid_value 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) suppress_warning_multi 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) no_init_aliases 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) linkalways_with_unused_pou 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) conditionalshow_all_locals 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) pin_presentation_order 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) estimated_stack_usage 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) no_virtual_actions 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) io_function_block 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) call_after_global_init_slot 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) warning_disable_restore 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) call_after_online_change_slot 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) call_before_global_exit_slot 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) call_on_type_change 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) pin_presentation_order_outputs 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) pin_presentation_order_wildcard 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) implicit_parameter_pouname 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) region_basic 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) error_message 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) region_pragma_basic 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) region_pragma_nested 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) pragma_unknown_directive 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) pragma_conflicting_pair 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fb_init_canonical 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fb_reinit_canonical 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fb_exit_canonical 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fb_init_wrong_return_type 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fb_init_missing_bInCopyCode 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fb_exit_missing_bInCopyCode 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fb_reinit_with_params 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) identifier_double_underscore 1`] = `
[
  {
    "diagCode": "double-underscore-prefix",
    "file": "pou",
    "kind": "quickfix",
    "title": "Rename to '_systemReserved'",
  },
]
`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) identifier_consecutive_underscores 1`] = `
[
  {
    "diagCode": "consecutive-underscores",
    "file": "pou",
    "kind": "quickfix",
    "title": "Collapse underscores → 'foo_bar'",
  },
]
`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) identifier_backtick_keyword_escape 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) init_slot_default_50000 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) init_slot_reserved_alarm_manager 1`] = `
[
  {
    "diagCode": "init-slot-collision",
    "file": "pou",
    "kind": "quickfix",
    "title": "Use slot 30001 (unique)",
  },
]
`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) init_slot_reserved_device_object 1`] = `
[
  {
    "diagCode": "init-slot-collision",
    "file": "pou",
    "kind": "quickfix",
    "title": "Use slot 60001 (unique)",
  },
]
`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) init_slot_user_early 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) shadowing_method_local_shadows_member 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) shadowing_method_param_shadows_member 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) shadowing_method_local_shadows_fb_var 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) conversion_int_to_real_valid 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) conversion_real_to_int_valid 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) conversion_int_to_real_wrong_source 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) conversion_dint_to_int_wrong_source 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) conversion_implicit_dint_to_int 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) conversion_bool_to_int_valid 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) conversion_int_to_bool_valid 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) conversion_time_to_dword 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) conversion_date_to_string 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) conversion_dt_to_date 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) conversion_trunc_real_to_dint 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) conversion_trunc_int_real_to_int 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) conversion_overloaded_to_int 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) duplicate_declaration 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) unresolved_identifier_in_body 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) pragma_conflict_hide_plus_monitoring 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) deref_on_array_type 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) conditional_define_then_if 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) conditional_else_branch_taken 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) conditional_elsif_chain 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) conditional_orphan_else 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) conditional_undefine_after_define 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_arithmetic_same_type 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_arithmetic_int_plus_dint 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_arithmetic_int_plus_real 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_modulo_on_real 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_comparison_int_vs_int 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_logical_bool 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_bitwise_on_int 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_shift_left 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_arithmetic_bool_plus_int 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_sel_bool_picker 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_mux_multi_select 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_min_max 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_limit_clamp 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_math_abs 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_math_sqrt_real 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_math_ln 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_math_log 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_math_exp 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_math_inverse_trig 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_math_trig 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_math_expt 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_shift_right 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_rotate_left 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_rotate_right 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_sys_isvalidref 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_sys_varinfo 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_sys_currenttask 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_sys_try_catch 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_sys_new_delete 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) op_sys_queryinterface 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) literal_hex 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) literal_binary 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) literal_octal 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) literal_typed_int_hash 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) literal_real_scientific 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) literal_time 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) literal_date 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) literal_tod 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) literal_string_single_quoted 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) literal_wstring_double_quoted 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) literal_string_to_int_assignment 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) interface_empty 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) interface_empty_impl 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) interface_with_method 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) interface_with_method_impl 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) interface_missing_implementation 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) interface_extends_another 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) interface_extends_another_impl 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) interface_method_with_return_type 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) interface_method_with_return_type_impl 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) interface_with_property 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) interface_with_property_impl 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) oop_base 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) oop_extends_simple 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) oop_extends_with_override 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) oop_extends_with_super 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) oop_final_fb 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) oop_abstract_fb 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) oop_abstract_instantiated 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) oop_action_block 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) type_array_of_int 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) type_array_2d 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) type_pointer_to_int 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) type_reference_to_int 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) type_string_n 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) type_var_temp_in_method 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) type_var_constant 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) type_deref_non_pointer 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) type_dut_struct_simple 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) type_dut_struct_extends 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) type_dut_struct_nested 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) type_dut_enum_simple 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) type_dut_enum_with_base 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) type_dut_enum_explicit_values 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) type_dut_alias_int 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) type_dut_alias_string 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) type_dut_union 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) type_dut_subrange 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) type_any_function_input 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) type_any_int_function_input 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) type_codesys_xint 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) type_codesys_uxint 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) type_codesys_xword 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) type_codesys_vector 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) type_codesys_version 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) type_implicit_enum_inline 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) type_dut_struct_with_bit_fields 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) type_dut_alias_with_init 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) var_input_output_inout_on_fb 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) var_input_constant 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) var_inst_in_method 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) var_stat_in_method 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) var_retain 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) var_persistent 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) var_non_retain 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) var_config_address_binding 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) var_external_gvl 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) var_external_consumer 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) var_output_on_function 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) var_inline_enum_decl 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) ctrl_if_elsif_else 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) ctrl_case_of_else 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) ctrl_for_to_by_do 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) ctrl_while_do 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) ctrl_repeat_until 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) ctrl_exit_in_loop 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) ctrl_continue_in_loop 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) ctrl_return_from_method 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) keyword_this_dereference 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) keyword_null_pointer_init 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) operand_bit_access_byte 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) operand_bit_assign_word 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) operand_partial_word_in_dword 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) operand_hw_address_marker 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) operand_uchar_literal 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) use_fb_method_call_no_args 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) use_fb_method_call_one_input 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) use_fb_method_call_named_args 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) use_fb_method_returns_value 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) use_fb_property_read 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) use_fb_property_write 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) use_fb_callable 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) use_struct_member_access 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) use_struct_nested_member 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) use_gvl_field_access 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) use_this_member_in_method 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) use_function_call_with_arg 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) use_array_indexed_method_call 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) use_pointer_deref_struct_field 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) use_self_method_call 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) use_method_array_param 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fbd_box_and_two_inputs 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fbd_assignment_output 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fbd_fb_instance_call 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fbd_empty_network 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fbd_two_networks_stacked 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fbd_dangling_connection_ref 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fbd_duplicate_local_id 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fbd_orphan_block 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fbd_or_two_inputs 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fbd_not_unary 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fbd_xor_two_inputs 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fbd_add_int 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fbd_comparison_gt 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fbd_move_assignment 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fbd_sr_flipflop 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fbd_ton_timer 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fbd_ctu_counter 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fbd_f_trig_edge 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fbd_chained_blocks 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fbd_fanout_one_source_two_consumers 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fbd_block_to_outvar 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fbd_return_statement 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fbd_jump_to_label 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fbd_fb_undeclared_instance 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fbd_jump_to_missing_label 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) fbd_var_input_output_sections 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) ld_minimal_rung 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) ld_series_contacts 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) ld_negated_contact 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) ld_rising_edge_contact 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) ld_falling_edge_contact 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) ld_negated_coil 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) ld_set_coil 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) ld_reset_coil 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) ld_two_rungs 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) ld_block_in_rung 1`] = `[]`;

exports[`codeAction corpus (every diagnostic in POU + PLC_PRG) ld_dangling_contact_ref 1`] = `[]`;
